--- a/src/App.css
+++ b/src/App.css
@@ -3,62 +3,44 @@ html {
 }
 
 .tile {
+  opacity: 40%;
   width: 2.5vw;
   height: 2.5vw;
   margin: -2px 0px;
-  background-color: rgb(122, 193, 255);
-  border: 1px solid #fff;
-  border-radius: 15px;
-}
-
-.tile:hover {
-  background-color: rgb(78, 172, 255);
+  border: 1px solid #4cc9f0;
 }
 
 .tile-start {
-  background-color: rgb(86, 67, 255);
+  opacity: 100%;
+  background-color: #3a0ca3;
 }
 
 .tile-start:hover {
-  background-color: rgb(57, 35, 255);
+  background-color: #340b94;
 }
 
 .tile-visited {
-  background-color: rgb(96, 255, 123);
+  opacity: 70%;
+  background-color: #4cc9f0;
+  border: 1px solid #83defa;
 }
 
 .tile-visited:hover {
-  background-color: rgb(65, 255, 97);
+  background-color: #22beee;
 }
 
 .tile-end {
-  background-color: rgb(170, 67, 255);
+  opacity: 100%;
+  background-color: #ff4699;
 }
 
 .tile-end:hover {
-  background-color: rgb(158, 40, 255);
-}
-/* 
-.tile-cyan {
-  animation-name: animation1;
-  animation-duration: 1s;
+  background-color: #ff0073;
 }
 
-.tile-red {
-  animation-name: animation2;
-  animation-duration: 1s;
+.tile-picked {
+  opacity: 60%;
 }
-
-
-.tile-green {
-  background-color: rgb(101, 255, 114);
-  animation-name: animation2;
-  animation-duration: 1s;
-}
-
-.tile-green:hover {
-  background-color: rgb(47, 255, 65);
-} */
 
 .board {
   width: 90vw;
@@ -67,16 +49,4 @@ html {
 
 .panel {
   height: 15vh;
-}
-
-@keyframes animation1 {
-  0%   {border-radius: 15px;}
-  50%  {border-radius: 40px;}
-  100% {border-radius: 15px;}
-}
-
-@keyframes animation2 {
-  0%   {border-radius: 15px;}
-  50%  {border-radius: 40px;}
-  100% {border-radius: 15px;}
 }
