--- a/src/App.css
+++ b/src/App.css
@@ -61,4 +61,13 @@ html {
 
 .panel {
   height: 15vh;
+  width: 50%;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.btn {
+  padding: 1rem 2rem;
 }
