--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,41 @@ html {
   overflow: hidden;
 }
 
-.node {
+.board {
+  height: 100vh;
+}
+
+.panel {
+  height: 15vh;
+  width: 50%;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.node-group {
+  margin: auto;
+  align-items: center;
+  line-height: 0;
+  font-size: 0;
+  text-align: center;
+}
+
+.node-container {
   box-sizing: border-box;
   display: inline-block;
   width: 37px;
   height: 37px;
-  opacity: 0.4;
-  transition: all 0.2s ease-out;
+}
+
+.node {
+  position: relative;
   border: 1px solid #4cc9f0;
+  opacity: 0.6;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
 }
 
 .node-visited {
@@ -66,25 +93,4 @@ html {
 
 .node-moving {
   opacity: 0.6;
-}
-
-.board {
-  height: 100vh;
-}
-
-.node-group {
-  margin: auto;
-  align-items: center;
-  line-height: 0;
-  font-size: 0;
-  text-align: center;
-}
-
-.panel {
-  height: 15vh;
-  width: 50%;
-  margin: auto;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
 }
