--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,28 @@ html {
   border: solid 1px #646464;
   background-color: #3a3a3a;
   opacity: 1;
+  animation: spring 0.3s ease forwards;
+  z-index: 2;  
 }
+
+@keyframes spring {
+  0% {
+    height: 0%;
+    width: 0%;
+    margin: 50%;
+  }
+  70% {
+    height: 120%;
+    width: 120%;
+    margin: -10%;
+  }
+  100% {
+    height: 100%;
+    width: 100%;
+    margin: 0%;
+  }
+}
+
 
 .node-start {
   background-color: #3a0ca3;
