--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,6 @@ html {
   border: 1px solid #a7eaff;
   opacity: 0.7;
   animation: balloon 0.5s ease;
-  animation-direction: alternate;
 }
 
 @keyframes balloon {
@@ -74,12 +73,24 @@ html {
   background-color: #ffec42;
   border: 1px solid #ffec42;
   opacity: 1;
-  z-index: 2;
+  animation: squeez 0.5s ease forwards;
 }
 
-.node-path:hover {
-  background-color: #ffe600;
-  opacity: 1;
+@keyframes squeez {
+  0% {
+    height: 100%;
+    width: 100%;
+    margin: 0%;
+    border-radius: 10px;
+    background-color: #ffec42;
+  }
+  100% {
+    height: 50%;
+    width: 50%;
+    margin: 25%;
+    border-radius: 13px;
+    background-color: #ff4242;
+  }
 }
 
 .node-wall {
