--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ html {
 
 .node {
   position: relative;
-  border: 1px solid #4cc9f0;
+  border: 1px solid #6bdcff;
   opacity: 0.6;
   height: 100%;
   width: 100%;
@@ -40,7 +40,7 @@ html {
 }
 
 .node-visited {
-  border: 1px solid #4cc9f0;
+  border: 1px solid #6bdcff;
   opacity: 0.6;
   animation: balloon 0.5s ease;
 }
@@ -51,21 +51,22 @@ html {
     width: 0%;
     margin: 50%;
     border-radius: 10px;
-    background-color: #4cc9f0;
+    background-color: #6bdcff;
   }
   70% {
-    height: 150%;
-    width: 150%;
-    margin: -25%;
+    height: 120%;
+    width: 120%;
+    margin: -15%;
     border-radius: 13px;
-    background-color: #ac00f0;
+    background-color: #c300ff;
+    border: 1px solid #c300ff;
   }
   100% {
     height: 0%;
     width: 0%;
     margin: 50%;
     border-radius: 10px;
-    background-color: #4cc9f0;
+    background-color: #6bdcff;
   }
 }
 
