--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,7 @@ html {
   background-color: #3a0ca3;
   border: solid 1px #340b94;
   opacity: 1;
+  animation: sprout 0.8s ease forwards;
 }
 
 .node-start:hover {
@@ -136,27 +137,60 @@ html {
   background-color: #ff4699;
   border: solid 1px #ff4699;
   opacity: 1;
+  animation: sprout 0.8s ease forwards;
 }
 
 .node-end:hover {
   background-color: #ff0073;
 }
 
-.node-moving {
-  opacity: 0.8;
-  animation: float 0.5s ease forwards;
+@keyframes sprout {
+  
+  0% {
+    height: 50%;
+    width: 50%;
+    margin: 25%;
+    border-radius: 8px;
+  }
+  100% {
+    height: 100%;
+    width: 100%;
+    margin: 0%;
+    border-radius: 0px;
+  }
 }
 
-@keyframes float {
+.node-moving {
+  opacity: 0.8;
+  animation: shrink 0.5s ease 0s forwards, float 0.6s ease-in 0.5s infinite alternate;
+}
+
+@keyframes shrink {
+  
   0% {
     height: 100%;
     width: 100%;
     margin: 0%;
+    border-radius: 0px;
   }
   100% {
     height: 50%;
     width: 50%;
     margin: 25%;
-    border-radius: 7px;
+    border-radius: 8px;
+  }
+}
+
+@keyframes float {
+  
+  0% {
+    height: 50%;
+    width: 50%;
+    margin: 25%;
+  }
+  100% {
+    height: 70%;
+    width: 70%;
+    margin: 15%;
   }
 }
