--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ html {
   align-items: center;
 }
 
-.node-group {
+.cell-group {
   margin: auto;
   align-items: center;
   line-height: 0;
@@ -23,14 +23,14 @@ html {
   text-align: center;
 }
 
-.node-container {
+.cell-container {
   box-sizing: border-box;
   display: inline-block;
   width: 37px;
   height: 37px;
 }
 
-.node {
+.cell {
   position: relative;
   border: 1px solid #6bdcff;
   opacity: 0.6;
@@ -39,7 +39,7 @@ html {
   z-index: 1;
 }
 
-.node-visited {
+.cell-visited {
   border: 1px solid #6bdcff;
   opacity: 0.6;
   animation: balloon 0.5s ease;
@@ -70,7 +70,7 @@ html {
   }
 }
 
-.node-path {
+.cell-path {
   background-color: #ffec42;
   border: 1px solid #ffec42;
   opacity: 1;
@@ -96,7 +96,7 @@ html {
   }
 }
 
-.node-wall {
+.cell-wall {
   border: solid 1px #646464;
   background-color: #3a3a3a;
   opacity: 1;
@@ -122,25 +122,25 @@ html {
   }
 }
 
-.node-start {
+.cell-start {
   background-color: #3a0ca3;
   border: solid 1px #340b94;
   opacity: 1;
   animation: sprout 0.8s ease forwards;
 }
 
-.node-start:hover {
+.cell-start:hover {
   background-color: #340b94;
 }
 
-.node-end {
+.cell-end {
   background-color: #ff4699;
   border: solid 1px #ff4699;
   opacity: 1;
   animation: sprout 0.8s ease forwards;
 }
 
-.node-end:hover {
+.cell-end:hover {
   background-color: #ff0073;
 }
 
@@ -160,7 +160,7 @@ html {
   }
 }
 
-.node-moving {
+.cell-moving {
   opacity: 0.8;
   animation: shrink 0.5s ease 0s forwards, float 0.6s ease-in 0.5s infinite alternate;
 }
