--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,8 @@ html {
 .cell-container {
   box-sizing: border-box;
   display: inline-block;
-  width: 37px;
-  height: 37px;
+  width: 45px;
+  height: 45px;
 }
 
 .cell {
@@ -42,7 +42,7 @@ html {
 .cell-visited {
   border: 1px solid #6bdcff;
   opacity: 0.6;
-  animation: balloon 0.5s ease;
+  animation: balloon 2s ease forwards;
 }
 
 @keyframes balloon {
@@ -50,23 +50,41 @@ html {
     height: 0%;
     width: 0%;
     margin: 50%;
-    border-radius: 10px;
-    background-color: #6bdcff;
+    border-radius: 15px;
+    background-color: #c300ff;
   }
-  70% {
+
+  15% {
+    background-color: #c300ff;
+  }
+
+  30% {
     height: 120%;
     width: 120%;
     margin: -15%;
-    border-radius: 13px;
-    background-color: #c300ff;
-    border: 1px solid #c300ff;
+    border-radius: 15px;
+    background-color: #0062ff;
+    border: 1px solid #0062ff;
   }
-  100% {
-    height: 0%;
-    width: 0%;
-    margin: 50%;
+
+  60% {
+    height: 100%;
+    width: 100%;
+    margin: 0%;
     border-radius: 10px;
+    background-color: #0062ff;
+    border: 1px solid #0062ff;
+  }
+
+  80% {
     background-color: #6bdcff;
+    border: 1px solid #c4f1ff;
+    border-radius: 0px;
+  }
+
+  100% {
+    background-color: #ffffff;
+    border: 1px solid #6bdcff;
   }
 }
 
